K8S/pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: default #a namespace is a DNS compatible label that objects are subdivided into. The default namespace is 'default'.
  name: single-pod # a string that uniquely identifies this object within the current namespace. 
  labels: #Labels are key-value pairs used to attach identifying metadata to Kubernetes objects.
    podname: react-js-sample-app
spec:
  containers:
    - name: react-js-sample-app-container
      image: learning
      imagePullPolicy: IfNotPresent #First checks the local image registry
      ports:
        - containerPort: 80 #defines the port on which app can be reached out inside the container. Firewall.
