K8S/clusterip_service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-pod-internal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: hello-pod
  type: ClusterIP
