K8S/lb_service.yml
kind: Service
apiVersion: v1
metadata:
  name: load-balancer-service
  annotations:
   service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    podname: react-js-sample-app
