K8S/lbservice.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-pod-public
  annotations:
   service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    name: web
  type: LoadBalancer
