K8S/service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-pod-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30000
  selector:
    name: web
