K8S/ingress_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-hello-pod-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: kutya.ec7114563f3f422c8149.westeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: hello-pod-internal
            port:
              number: 80
